--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "next": "16.1.1",
     "next-auth": "^4.24.13",
     "react": "19.2.3",
+    "react-countup": "^6.5.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.2",
     "sweetalert2": "^11.26.17"
   },
   "devDependencies": {
